[gd_scene load_steps=5 format=2]

[ext_resource path="res://Logo.png" type="Texture" id=1]
[ext_resource path="res://UI/Fonts/NugieRomantic_109.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MenuButton.gd" type="Script" id=4]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -840.0
margin_top = -460.0
margin_right = 840.0
margin_bottom = 460.0

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
margin_right = 1680.0
margin_bottom = 354.0
texture = ExtResource( 1 )

[node name="CenterRow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 358.0
margin_right = 1680.0
margin_bottom = 834.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterRow"]
margin_right = 100.0
margin_bottom = 476.0
rect_min_size = Vector2( 100, 0 )

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/CenterRow"]
margin_left = 104.0
margin_right = 636.0
margin_bottom = 476.0

[node name="NewGameButton" type="Button" parent="VBoxContainer/CenterRow/Buttons"]
margin_right = 532.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "New Game"
script = ExtResource( 4 )
scene = "res://Scenes/World.tscn"

[node name="LocalMultButton" type="Button" parent="VBoxContainer/CenterRow/Buttons"]
margin_top = 120.0
margin_right = 532.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 2 )
text = "Multiplayer"
script = ExtResource( 4 )

[node name="OptionsButton" type="Button" parent="VBoxContainer/CenterRow/Buttons"]
margin_top = 240.0
margin_right = 532.0
margin_bottom = 356.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
script = ExtResource( 4 )

[node name="QuitButton" type="Button" parent="VBoxContainer/CenterRow/Buttons"]
margin_top = 360.0
margin_right = 532.0
margin_bottom = 476.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
script = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterRow/Buttons/LocalMultButton" to="." method="_on_LocalMultButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
